--- a/css/general.css
+++ b/css/general.css
@@ -82,7 +82,7 @@ h1 {
   width: 25px;
   height: 25px;
   border-radius: 100%;
-  border: 1px solid #121212;
+  border: 1px solid #777;
   background-image: url("../img/cancel.png");
   background-repeat: no-repeat;
   background-position: center center;
@@ -119,7 +119,7 @@ h1 {
   color: #efefef;
   vertical-align: text-bottom;
   background-color: #121212;
-  padding: 7px;
+  padding: 7px 12px;
   display: inline-block;
   margin-left: 10px; }
 
@@ -324,6 +324,21 @@ footer {
     justify-content: space-around; } }
 
 @media screen and (max-width: 767px) {
+  .lightBox_content {
+    width: 100%;
+    height: calc(100% - 50px);
+    top: initial; }
+  .lightBox_img {
+    height: 50%;
+    float: none;
+    margin-bottom: 9%; }
+  .lightBox_text {
+    width: 100%;
+    height: 35%;
+    float: none;
+    overflow: hidden; }
+  .lightBox_productDescription {
+    font-size: 16px; }
   .logo_text {
     display: none; }
   .projectInfo .content {
