--- a/working_file/general.scss
+++ b/working_file/general.scss
@@ -101,7 +101,7 @@ h1 {
     width: 25px;
     height: 25px;
     border-radius: 100%;
-    border: 1px solid $mainBlack;
+    border: 1px solid #777;
     background-image: url("../img/cancel.png");
     background-repeat: no-repeat;
     background-position: center center;
@@ -140,7 +140,7 @@ h1 {
     color: $fontWhite;
     vertical-align: text-bottom;
     background-color: $mainBlack;
-    padding: 7px;
+    padding: 7px 12px;
     display: inline-block;
     margin-left: 10px;
 }
@@ -359,6 +359,28 @@ footer {
 
 // RWD break - mobile
 @media screen and (max-width: 767px) {
+    // lightBox
+    .lightBox_content {
+        width: 100%;
+        height: calc(100% - 50px);
+        top: initial;
+    }
+    .lightBox_img {
+        height: 50%;
+        float: none;
+        margin-bottom: 9%;
+    }
+    .lightBox_text {
+        width: 100%;
+        height: 35%;
+        float: none;
+        overflow: hidden;
+    }
+    .lightBox_productDescription {
+        font-size: 16px;
+    }
+    // lightBox End
+
     // header
     .logo_text {
         display: none;
