--- a/working_file/general.scss
+++ b/working_file/general.scss
@@ -70,6 +70,7 @@ h1 {
     background-color: rgba(#000, .5);
     position: absolute;
     z-index: 101;
+    display: none;
 }
 .lightBox_content {
     width: 750px;
@@ -197,7 +198,6 @@ header {
     background-color: $mainGrey;
     padding: 7px 15px;
 }
-
 // header End
 
 // project info
@@ -235,7 +235,7 @@ header {
     position: relative;
 }
 .progressBar {
-    width: 65%;
+    width: 0;
     height: 100%;
     background: $accentColor_gradient;
     position: absolute;
@@ -259,20 +259,20 @@ header {
 }
 // project info End
 
-// prodect reward
-.prodectReward {
+// product reward
+.productReward {
     position: relative;
     top: -125px;
     margin-bottom: -95px;
     box-sizing: border-box;
 }
-.prodectReward_title {
+.productReward_title {
     font-size: 18px;
     letter-spacing: 1px;
     color: $fontWhite;
     margin-left: 10px;
     margin-bottom: 20px;
-    .prodectReward_amount {
+    .productReward_amount {
         font-size: 15px;
         font-weight: 800;
         color: #333;
@@ -283,12 +283,12 @@ header {
         display: inline-block;
     }
 }
-.prodectReward_list {
+.productReward_list {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
-.prodectReward_list_box {
+.productReward_list_box {
     width: 250px;
     border-radius: 7px;
     box-shadow: 0 1px 10px rgba(#c0c0c0, .75);
@@ -298,10 +298,10 @@ header {
     position: relative;
     margin: 0 5px 35px;
 }
-.prodectReward_list_box_section1 {
+.productReward_list_box_section1 {
     text-align: center;
 }
-.prodectReward_priceLabel {
+.productReward_priceLabel {
     font-size: 12px;
     letter-spacing: 1px;
     color: $fontWhite;
@@ -310,32 +310,32 @@ header {
     position: absolute;
     left: 0;
 }
-.prodectReward_prodectImg {
+.productReward_productImg {
     height: 150px;
 }
-.prodectReward_list_box_section2 {
+.productReward_list_box_section2 {
     letter-spacing: 1px;
     margin-top: 15px;
 }
-.prodectReward_prodectName {
+.productReward_productName {
     font-size: 15px;
     color: #333;
     font-weight: 800;
     margin-bottom: 15px;
 }
-.prodectReward_prodectDescription {
+.productReward_productDescription {
     font-size: 12px;
     line-height: 21px;
     color: #999;
 }
-.prodectReward_btn {
+.productReward_btn {
     margin-top: 15px;
     text-align: right;
 }
 .btn_buyNow {
     margin-left: 5px;
 }
-// prodect reward End
+// product reward End
 
 // footer
 footer {
@@ -346,14 +346,14 @@ footer {
 
 // RWD break - tablet
 @media screen and (max-width: 1200px) {
-    // prodect reward
-    .prodectReward {
+    // product reward
+    .productReward {
         padding: 0 10px;
     }
-    .prodectReward_list {
+    .productReward_list {
         justify-content: space-around;
     }
-    // prodect reward End
+    // product reward End
 }
 // RWD break - tablet End
 
@@ -413,16 +413,16 @@ footer {
     }
     // project info End
 
-    // prodect reward
-    .prodectReward {
+    // product reward
+    .productReward {
         padding: 0 15px;
         margin-bottom: -45px;
         top: -65px;
     }
-    .prodectReward_title {
+    .productReward_title {
         display: none;
     }
-    .prodectReward_list_box {
+    .productReward_list_box {
         width: 100%;
         border-radius: 0;
         box-shadow: 0 3px 10px rgba(#c0c0c0, .5);
@@ -430,27 +430,27 @@ footer {
         margin-right: 0;
         margin-bottom: 20px;
     }
-    .prodectReward_list_box_section1 {
+    .productReward_list_box_section1 {
         width: 25%;
         display: inline-block;
         float: left;
-        .prodectReward_priceLabel {
+        .productReward_priceLabel {
             bottom: 13px;
         }
-        .prodectReward_prodectImg {
+        .productReward_productImg {
             height: 105px;
         }
     }
-    .prodectReward_list_box_section2 {
+    .productReward_list_box_section2 {
         width: 70%;
         height: 70%;
         margin: 0;
         display: inline-block;
         float: right;
-        .prodectReward_prodectDescription {
+        .productReward_productDescription {
             line-height: 18px;
         }
     }
-    // prodect reward End
+    // product reward End
 }
 // RWD break - mobile End
