--- a/working_file/general.scss
+++ b/working_file/general.scss
@@ -46,6 +46,7 @@ h1 {
 .btn_more {
     color: #bbb;
     border: 1px solid #bbb;
+    vertical-align: bottom;
     &:hover {
         color: #d6d6d6;
         border: 1px solid #d6d6d6;
@@ -299,7 +300,7 @@ header {
     margin: 0 5px 35px;
 }
 .productReward_list_box_section1 {
-    text-align: center;
+    overflow: hidden;
 }
 .productReward_priceLabel {
     font-size: 12px;
@@ -310,27 +311,47 @@ header {
     position: absolute;
     left: 0;
 }
-.productReward_productImg {
+.productReward_productImgBox {
+    width: 100%;
     height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.productReward_productImg {
+    max-width: 100%;
 }
 .productReward_list_box_section2 {
     letter-spacing: 1px;
     margin-top: 15px;
+    margin-bottom: 40px;
 }
 .productReward_productName {
+    height: 15px;
     font-size: 15px;
     color: #333;
     font-weight: 800;
     margin-bottom: 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .productReward_productDescription {
-    font-size: 12px;
+    height: 65px;
+    font-size: 13px;
     line-height: 21px;
     color: #999;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .productReward_btn {
     margin-top: 15px;
-    text-align: right;
+    position: absolute;
+    right: 15px;
+    bottom: 15px;
 }
 .btn_buyNow {
     margin-left: 5px;
@@ -437,18 +458,31 @@ footer {
         .productReward_priceLabel {
             bottom: 13px;
         }
+        .productReward_productImgBox {
+            align-items: flex-start;
+        }
         .productReward_productImg {
+            max-width: none;
             height: 105px;
         }
     }
     .productReward_list_box_section2 {
         width: 70%;
-        height: 70%;
+        height: 100%;
         margin: 0;
         display: inline-block;
         float: right;
+        position: relative;
         .productReward_productDescription {
+            height: 70px;
             line-height: 18px;
+            -webkit-line-clamp: 4;
+        }
+        .productReward_btn {
+            margin-top: 15px;
+            position: absolute;
+            right: 0;
+            bottom: 0;
         }
     }
     // product reward End
