--- a/css/general.css
+++ b/css/general.css
@@ -107,23 +107,51 @@ h1 {
     -o-transition: .3s;
     transition: .3s; }
 
-.lightBox_img {
+.lightBox_imgBox {
   width: 280px;
   height: 100%;
   text-align: center;
-  float: left; }
-  .lightBox_img img {
-    height: 100%; }
+  padding-left: 10px;
+  padding-right: 30px;
+  float: left;
+  overflow: hidden;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .lightBox_imgBox .lightBox_img {
+    max-width: 100%;
+    max-height: 100%; }
 
 .lightBox_text {
   width: calc(100% - 280px);
-  float: left; }
+  float: left;
+  padding-right: 15px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .lightBox_productName {
+  max-height: 65px;
   font-size: 24px;
-  margin-top: 20px;
-  margin-bottom: 25px;
-  display: inline-block; }
+  line-height: 34px;
+  margin-top: 25px;
+  margin-bottom: 13px;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; }
 
 .lightBox_priceLabel {
   font-size: 12px;
@@ -131,13 +159,20 @@ h1 {
   color: #efefef;
   vertical-align: text-bottom;
   background-color: #121212;
-  padding: 7px 12px;
-  display: inline-block;
-  margin-left: 10px; }
+  padding: 7px 20px;
+  margin-bottom: 13px;
+  display: inline-block; }
 
 .lightBox_productDescription {
+  height: 70px;
   font-size: 17px;
-  line-height: 24px; }
+  line-height: 24px;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical; }
 
 header {
   width: 100%;
@@ -390,15 +425,22 @@ footer {
     width: 100%;
     height: calc(100% - 50px);
     top: initial; }
-  .lightBox_img {
-    height: 50%;
+  .lightBox_imgBox {
+    width: auto;
+    height: auto;
+    max-height: 45%;
     float: none;
-    margin-bottom: 9%; }
+    padding: 0;
+    margin-top: 30px;
+    margin-bottom: 25px; }
   .lightBox_text {
     width: 100%;
-    height: 35%;
+    max-height: 35%;
+    padding: 0;
     float: none;
     overflow: hidden; }
+  .lightBox_productName {
+    margin-top: 0; }
   .lightBox_productDescription {
     font-size: 16px; }
   .logo_text {
