--- a/working_file/general.scss
+++ b/working_file/general.scss
@@ -117,24 +117,40 @@ h1 {
         transition: .3s;
     }
 }
-.lightBox_img {
+.lightBox_imgBox {
     width: 280px;
     height: 100%;
     text-align: center;
+    padding-left: 10px;
+    padding-right: 30px;
     float: left;
-    img {
-        height: 100%;
+    overflow: hidden;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .lightBox_img {
+        max-width: 100%;
+        max-height: 100%;
     }
 }
 .lightBox_text {
     width: calc(100% - 280px);
     float: left;
+    padding-right: 15px;
+    box-sizing: border-box;
 }
 .lightBox_productName {
+    max-height: 65px;
     font-size: 24px;
-    margin-top: 20px;
-    margin-bottom: 25px;
-    display: inline-block;
+    line-height: 34px;
+    margin-top: 25px;
+    margin-bottom: 13px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 .lightBox_priceLabel {
     font-size: 12px;
@@ -142,13 +158,19 @@ h1 {
     color: $fontWhite;
     vertical-align: text-bottom;
     background-color: $mainBlack;
-    padding: 7px 12px;
+    padding: 7px 20px;
+    margin-bottom: 13px;
     display: inline-block;
-    margin-left: 10px;
 }
 .lightBox_productDescription {
+    height: 70px;
     font-size: 17px;
     line-height: 24px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 // lightBox End
 
@@ -386,16 +408,24 @@ footer {
         height: calc(100% - 50px);
         top: initial;
     }
-    .lightBox_img {
-        height: 50%;
+    .lightBox_imgBox {
+        width: auto;
+        height: auto;
+        max-height: 45%;
         float: none;
-        margin-bottom: 9%;
+        padding: 0;
+        margin-top: 30px;
+        margin-bottom: 25px;
     }
     .lightBox_text {
         width: 100%;
-        height: 35%;
+        max-height: 35%;
+        padding: 0;
         float: none;
         overflow: hidden;
+    }
+    .lightBox_productName {
+        margin-top: 0;
     }
     .lightBox_productDescription {
         font-size: 16px;
