--- a/css/general.css
+++ b/css/general.css
@@ -408,6 +408,12 @@ header {
 .btn_buyNow {
   margin-left: 5px; }
 
+.flexBoxAdjust_fakeBox {
+  height: 0;
+  padding: 0;
+  margin: 0;
+  visibility: hidden; }
+
 footer {
   height: 50px;
   background-color: #121212; }
