--- a/working_file/general.scss
+++ b/working_file/general.scss
@@ -378,6 +378,12 @@ header {
 .btn_buyNow {
     margin-left: 5px;
 }
+.flexBoxAdjust_fakeBox {
+    height: 0;
+    padding: 0;
+    margin: 0;
+    visibility: hidden;
+}
 // product reward End
 
 // footer
