--- a/css/general.css
+++ b/css/general.css
@@ -53,6 +53,10 @@ h1 {
     -o-transition: .3s;
     transition: .3s; }
 
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden; }
+
 .lightBox {
   width: 100%;
   height: 100%;
@@ -439,6 +443,8 @@ footer {
     padding: 0;
     margin-top: 30px;
     margin-bottom: 25px; }
+    .lightBox_imgBox .lightBox_img {
+      max-height: none; }
   .lightBox_text {
     width: 100%;
     max-height: 35%;
@@ -473,6 +479,7 @@ footer {
     display: none; }
   .productReward_list_box {
     width: 100%;
+    height: 165px;
     border-radius: 0;
     -webkit-box-shadow: 0 3px 10px rgba(192, 192, 192, 0.5);
     box-shadow: 0 3px 10px rgba(192, 192, 192, 0.5);
