--- a/working_file/general.scss
+++ b/working_file/general.scss
@@ -62,6 +62,11 @@ h1 {
         transition: .3s;
     }
 }
+
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
+}
 // general setting End
 
 // lightBox
@@ -422,6 +427,9 @@ footer {
         padding: 0;
         margin-top: 30px;
         margin-bottom: 25px;
+        .lightBox_img {
+            max-height: none;
+        }
     }
     .lightBox_text {
         width: 100%;
@@ -481,6 +489,7 @@ footer {
     }
     .productReward_list_box {
         width: 100%;
+        height: 165px;
         border-radius: 0;
         box-shadow: 0 3px 10px rgba(#c0c0c0, .5);
         margin-left: 0;
